--- a/scripts/8-30-2023_45CHumidityChamberTesting.ipynb
+++ b/scripts/8-30-2023_45CHumidityChamberTesting.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "os.chdir(r'C:\\Users\\jrosh\\Documents\\FTIR_Mapping\\ftir')\n",
+    "os.chdir(r'C:\\Users\\jrosh\\Programming\\FTIR_mapping')\n",
     "sys.path.append(\"../\")\n",
     "\n",
     "# imports\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "entering GUI file input mode via Tkinter\n",
-      "48\n",
+      "12\n",
       "multiple files, tuple\n"
      ]
     }
@@ -198,14 +198,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wavenumber</th>\n",
+       "      <th>0min_control.0</th>\n",
+       "      <th>0min_control.1</th>\n",
+       "      <th>0min_control.2</th>\n",
+       "      <th>0min_control.3</th>\n",
+       "      <th>0min_control.4</th>\n",
+       "      <th>0min_control.5</th>\n",
+       "      <th>2min_45c_90pct_TimeAfterReaching90pct.0</th>\n",
+       "      <th>2min_45c_90pct_TimeAfterReaching90pct.1</th>\n",
+       "      <th>2min_45c_90pct_TimeAfterReaching90pct.2</th>\n",
+       "      <th>2min_45c_90pct_TimeAfterReaching90pct.3</th>\n",
+       "      <th>2min_45c_90pct_TimeAfterReaching90pct.4</th>\n",
+       "      <th>2min_45c_90pct_TimeAfterReaching90pct.5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3998.51641</td>\n",
+       "      <td>0.00465</td>\n",
+       "      <td>0.00470</td>\n",
+       "      <td>0.00458</td>\n",
+       "      <td>0.00464</td>\n",
+       "      <td>0.00453</td>\n",
+       "      <td>0.00462</td>\n",
+       "      <td>0.00130</td>\n",
+       "      <td>0.00111</td>\n",
+       "      <td>0.00419</td>\n",
+       "      <td>0.00426</td>\n",
+       "      <td>0.00436</td>\n",
+       "      <td>0.00431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3997.08837</td>\n",
+       "      <td>0.00462</td>\n",
+       "      <td>0.00466</td>\n",
+       "      <td>0.00455</td>\n",
+       "      <td>0.00469</td>\n",
+       "      <td>0.00452</td>\n",
+       "      <td>0.00470</td>\n",
+       "      <td>0.00133</td>\n",
+       "      <td>0.00118</td>\n",
+       "      <td>0.00426</td>\n",
+       "      <td>0.00431</td>\n",
+       "      <td>0.00435</td>\n",
+       "      <td>0.00437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3995.66033</td>\n",
+       "      <td>0.00459</td>\n",
+       "      <td>0.00460</td>\n",
+       "      <td>0.00454</td>\n",
+       "      <td>0.00473</td>\n",
+       "      <td>0.00454</td>\n",
+       "      <td>0.00476</td>\n",
+       "      <td>0.00136</td>\n",
+       "      <td>0.00125</td>\n",
+       "      <td>0.00430</td>\n",
+       "      <td>0.00434</td>\n",
+       "      <td>0.00438</td>\n",
+       "      <td>0.00441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3994.23229</td>\n",
+       "      <td>0.00458</td>\n",
+       "      <td>0.00455</td>\n",
+       "      <td>0.00456</td>\n",
+       "      <td>0.00476</td>\n",
+       "      <td>0.00456</td>\n",
+       "      <td>0.00476</td>\n",
+       "      <td>0.00139</td>\n",
+       "      <td>0.00130</td>\n",
+       "      <td>0.00429</td>\n",
+       "      <td>0.00435</td>\n",
+       "      <td>0.00443</td>\n",
+       "      <td>0.00442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3992.80425</td>\n",
+       "      <td>0.00459</td>\n",
+       "      <td>0.00454</td>\n",
+       "      <td>0.00459</td>\n",
+       "      <td>0.00478</td>\n",
+       "      <td>0.00459</td>\n",
+       "      <td>0.00474</td>\n",
+       "      <td>0.00144</td>\n",
+       "      <td>0.00135</td>\n",
+       "      <td>0.00425</td>\n",
+       "      <td>0.00434</td>\n",
+       "      <td>0.00445</td>\n",
+       "      <td>0.00441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2516</th>\n",
+       "      <td>405.56381</td>\n",
+       "      <td>0.38831</td>\n",
+       "      <td>0.38900</td>\n",
+       "      <td>0.38408</td>\n",
+       "      <td>0.38613</td>\n",
+       "      <td>0.38874</td>\n",
+       "      <td>0.38478</td>\n",
+       "      <td>0.41413</td>\n",
+       "      <td>0.40749</td>\n",
+       "      <td>0.37714</td>\n",
+       "      <td>0.37868</td>\n",
+       "      <td>0.38671</td>\n",
+       "      <td>0.38737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2517</th>\n",
+       "      <td>404.13577</td>\n",
+       "      <td>0.38771</td>\n",
+       "      <td>0.38815</td>\n",
+       "      <td>0.38340</td>\n",
+       "      <td>0.38515</td>\n",
+       "      <td>0.38773</td>\n",
+       "      <td>0.38324</td>\n",
+       "      <td>0.41361</td>\n",
+       "      <td>0.40738</td>\n",
+       "      <td>0.37569</td>\n",
+       "      <td>0.37688</td>\n",
+       "      <td>0.38453</td>\n",
+       "      <td>0.38609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2518</th>\n",
+       "      <td>402.70772</td>\n",
+       "      <td>0.38733</td>\n",
+       "      <td>0.38729</td>\n",
+       "      <td>0.38247</td>\n",
+       "      <td>0.38400</td>\n",
+       "      <td>0.38504</td>\n",
+       "      <td>0.38169</td>\n",
+       "      <td>0.41282</td>\n",
+       "      <td>0.40734</td>\n",
+       "      <td>0.37402</td>\n",
+       "      <td>0.37519</td>\n",
+       "      <td>0.38249</td>\n",
+       "      <td>0.38449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2519</th>\n",
+       "      <td>401.27968</td>\n",
+       "      <td>0.38737</td>\n",
+       "      <td>0.38639</td>\n",
+       "      <td>0.38135</td>\n",
+       "      <td>0.38278</td>\n",
+       "      <td>0.38077</td>\n",
+       "      <td>0.38009</td>\n",
+       "      <td>0.41208</td>\n",
+       "      <td>0.40756</td>\n",
+       "      <td>0.37223</td>\n",
+       "      <td>0.37371</td>\n",
+       "      <td>0.38076</td>\n",
+       "      <td>0.38283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2520</th>\n",
+       "      <td>399.85164</td>\n",
+       "      <td>0.38759</td>\n",
+       "      <td>0.38572</td>\n",
+       "      <td>0.37997</td>\n",
+       "      <td>0.38179</td>\n",
+       "      <td>0.37676</td>\n",
+       "      <td>0.37878</td>\n",
+       "      <td>0.41170</td>\n",
+       "      <td>0.40811</td>\n",
+       "      <td>0.37093</td>\n",
+       "      <td>0.37262</td>\n",
+       "      <td>0.37890</td>\n",
+       "      <td>0.38139</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2521 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      wavenumber  0min_control.0  0min_control.1  0min_control.2  \\\n",
+       "0     3998.51641         0.00465         0.00470         0.00458   \n",
+       "1     3997.08837         0.00462         0.00466         0.00455   \n",
+       "2     3995.66033         0.00459         0.00460         0.00454   \n",
+       "3     3994.23229         0.00458         0.00455         0.00456   \n",
+       "4     3992.80425         0.00459         0.00454         0.00459   \n",
+       "...          ...             ...             ...             ...   \n",
+       "2516   405.56381         0.38831         0.38900         0.38408   \n",
+       "2517   404.13577         0.38771         0.38815         0.38340   \n",
+       "2518   402.70772         0.38733         0.38729         0.38247   \n",
+       "2519   401.27968         0.38737         0.38639         0.38135   \n",
+       "2520   399.85164         0.38759         0.38572         0.37997   \n",
+       "\n",
+       "      0min_control.3  0min_control.4  0min_control.5  \\\n",
+       "0            0.00464         0.00453         0.00462   \n",
+       "1            0.00469         0.00452         0.00470   \n",
+       "2            0.00473         0.00454         0.00476   \n",
+       "3            0.00476         0.00456         0.00476   \n",
+       "4            0.00478         0.00459         0.00474   \n",
+       "...              ...             ...             ...   \n",
+       "2516         0.38613         0.38874         0.38478   \n",
+       "2517         0.38515         0.38773         0.38324   \n",
+       "2518         0.38400         0.38504         0.38169   \n",
+       "2519         0.38278         0.38077         0.38009   \n",
+       "2520         0.38179         0.37676         0.37878   \n",
+       "\n",
+       "      2min_45c_90pct_TimeAfterReaching90pct.0  \\\n",
+       "0                                     0.00130   \n",
+       "1                                     0.00133   \n",
+       "2                                     0.00136   \n",
+       "3                                     0.00139   \n",
+       "4                                     0.00144   \n",
+       "...                                       ...   \n",
+       "2516                                  0.41413   \n",
+       "2517                                  0.41361   \n",
+       "2518                                  0.41282   \n",
+       "2519                                  0.41208   \n",
+       "2520                                  0.41170   \n",
+       "\n",
+       "      2min_45c_90pct_TimeAfterReaching90pct.1  \\\n",
+       "0                                     0.00111   \n",
+       "1                                     0.00118   \n",
+       "2                                     0.00125   \n",
+       "3                                     0.00130   \n",
+       "4                                     0.00135   \n",
+       "...                                       ...   \n",
+       "2516                                  0.40749   \n",
+       "2517                                  0.40738   \n",
+       "2518                                  0.40734   \n",
+       "2519                                  0.40756   \n",
+       "2520                                  0.40811   \n",
+       "\n",
+       "      2min_45c_90pct_TimeAfterReaching90pct.2  \\\n",
+       "0                                     0.00419   \n",
+       "1                                     0.00426   \n",
+       "2                                     0.00430   \n",
+       "3                                     0.00429   \n",
+       "4                                     0.00425   \n",
+       "...                                       ...   \n",
+       "2516                                  0.37714   \n",
+       "2517                                  0.37569   \n",
+       "2518                                  0.37402   \n",
+       "2519                                  0.37223   \n",
+       "2520                                  0.37093   \n",
+       "\n",
+       "      2min_45c_90pct_TimeAfterReaching90pct.3  \\\n",
+       "0                                     0.00426   \n",
+       "1                                     0.00431   \n",
+       "2                                     0.00434   \n",
+       "3                                     0.00435   \n",
+       "4                                     0.00434   \n",
+       "...                                       ...   \n",
+       "2516                                  0.37868   \n",
+       "2517                                  0.37688   \n",
+       "2518                                  0.37519   \n",
+       "2519                                  0.37371   \n",
+       "2520                                  0.37262   \n",
+       "\n",
+       "      2min_45c_90pct_TimeAfterReaching90pct.4  \\\n",
+       "0                                     0.00436   \n",
+       "1                                     0.00435   \n",
+       "2                                     0.00438   \n",
+       "3                                     0.00443   \n",
+       "4                                     0.00445   \n",
+       "...                                       ...   \n",
+       "2516                                  0.38671   \n",
+       "2517                                  0.38453   \n",
+       "2518                                  0.38249   \n",
+       "2519                                  0.38076   \n",
+       "2520                                  0.37890   \n",
+       "\n",
+       "      2min_45c_90pct_TimeAfterReaching90pct.5  \n",
+       "0                                     0.00431  \n",
+       "1                                     0.00437  \n",
+       "2                                     0.00441  \n",
+       "3                                     0.00442  \n",
+       "4                                     0.00441  \n",
+       "...                                       ...  \n",
+       "2516                                  0.38737  \n",
+       "2517                                  0.38609  \n",
+       "2518                                  0.38449  \n",
+       "2519                                  0.38283  \n",
+       "2520                                  0.38139  \n",
+       "\n",
+       "[2521 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wnrawData_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of spectra: 48\n"
+      "Total number of spectra: 12\n"
      ]
     }
    ],
@@ -296,7 +636,7 @@
      "output_type": "stream",
      "text": [
       "entering GUI file input mode via Tkinter\n",
-      "C:/Users/jrosh/Box/FTIR/2023.08.30 Calibrating Oven for SteamMasking with Nick/Output\n"
+      "C:/Users/jrosh/Desktop\n"
      ]
     }
    ],
@@ -337,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2729,9 +3069,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "FTIR_venv",
    "language": "python",
-   "name": "python3"
+   "name": "ftir_venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2743,7 +3083,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.3"
   },
   "vscode": {
    "interpreter": {
