--- a/scripts/From KBI Pharma/mms-processing-voila-v1b.ipynb
+++ b/scripts/From KBI Pharma/mms-processing-voila-v1b.ipynb
@@ -13,9 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'norbi'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 29\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# from norbi.io.plotly_plots import baseline_check_graph, raw_data_graph_inset4, peak_ctr_check_graph3b, raw_data_graph6\u001b[39;00m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mftir\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplotly_plots\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m baseline_check_graph, raw_data_graph, peak_ctr_check_graph\n\u001b[1;32m---> 29\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnorbi\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnormalize\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdf_norm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m df_trunc, df_center, df_area_norm\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnorbi\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnormalize\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdf_norm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m df_trunc, df_center, df_area_norm\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'norbi'"
+     ]
+    }
+   ],
    "source": [
     "# imports\n",
     "%matplotlib inline\n",
@@ -42,9 +54,34 @@
     "from ftir.io.utils import create_df_from_single_file\n",
     "from ftir.io.file_importer import file_select, file_upload, graphical_VM_file_importer\n",
     "from ftir.io.select_traces import multi_checkbox_grapher\n",
-    "from norbi.ui.plotly_plots import baseline_check_graph, raw_data_graph_inset4, peak_ctr_check_graph3b, raw_data_graph6\n",
+    "# from norbi.io.plotly_plots import baseline_check_graph, raw_data_graph_inset4, peak_ctr_check_graph3b, raw_data_graph6\n",
+    "from ftir.io.plotly_plots import baseline_check_graph, raw_data_graph, peak_ctr_check_graph\n",
     "\n",
+    "from norbi.normalize.df_norm import df_trunc, df_center, df_area_norm\n",
     "from norbi.normalize.df_norm import df_trunc, df_center, df_area_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jrosh\\Programming\\FTIR_Mapping\n",
+      "C:\\Users\\jrosh\\Programming\\FTIR_Mapping\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "path = os.getcwd()\n",
+    "print(path)\n",
+    "os.chdir(r'C:\\Users\\jrosh\\Programming\\FTIR_Mapping')\n",
+    "path = os.getcwd()\n",
+    "print(path)\n"
    ]
   },
   {
@@ -56,7 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ftir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,29 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70163f5e3b924d18aef9329dea570ba0",
+       "model_id": "801414cc1c7c4749bad4b80da5cbda6c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FileUpload(value={}, accept='.csv', description='Upload'), Button(description='C…"
+       "VBox(children=(HBox(children=(FileUpload(value=(), accept='.csv', description='Upload'), Button(description='C…"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -607,9 +647,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "FTIR_venv",
    "language": "python",
-   "name": "python3"
+   "name": "ftir_venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -621,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
