added a few updates before reinstalling windows

--- a/scripts/8-30-2023_45CHumidityChamberTesting.ipynb
+++ b/scripts/8-30-2023_45CHumidityChamberTesting.ipynb
@@ -39,9 +39,7 @@
     "\n",
     "Mar 20 2023: added user interface for heatmapping\n",
     "Mar 23 2023: Added fancier looking spectra plots (filled in with color), \n",
-    "- Added option to mention if there is a header in imported file\n",
-    "\n",
-    "August 30th 2023: this is for analysis of time at 45C and 90%RH in humidity chamber, with timer starting only once chamber reaches 90%RH"
+    "- Added option to mention if there is a header in imported file"
    ]
   },
   {
@@ -674,6 +672,13 @@
     "    func()\n",
     "    win.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3071,7 +3076,7 @@
   "kernelspec": {
    "display_name": "FTIR_venv",
    "language": "python",
-   "name": "ftir_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3084,11 +3089,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "1a8ea5ae0aab33bbee0ebb06e8cdde650700993b43495131d0ae48b12915ec01"
-   }
   }
  },
  "nbformat": 4,
