--- a/scripts/JeffsOldScripts/Actual Data analysis.ipynb
+++ b/scripts/JeffsOldScripts/Actual Data analysis.ipynb
@@ -89,9 +89,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "FTIR_venv",
    "language": "python",
-   "name": "python3"
+   "name": "ftir_venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -103,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
